workshop-app/deploy/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-tmux
  labels:
    app: tmux-workshop
